--- a/style.css
+++ b/style.css
@@ -1,4 +1,13 @@
-body{
-  background-color: #1c1c1c;
-  color: #e6e7e8;
+@media (prefers-color-scheme: dark) {
+  body{
+    background-color: #1c1c1c;
+    color: #e6e7e8;
+  }
+}
+
+@media (prefers-color-scheme: light) {
+  body{
+    background-color: #1c1c1c;
+    color: #e6e7e8;
+  }
 }
