--- a/style.css
+++ b/style.css
@@ -12,27 +12,53 @@
   }
 }
 
+main {
+  position: absolute;
+  left: 0%;
+  top: 0%;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  transition: all 2s ease;
+}
+
+@media (min-width: 321px) {
+body, html {
+    font: 400 16px/1.5 Segoe UI,system-ui,-apple-system,sans-serif;
+}}
+@media (min-width: 241px) {
+body, html {
+    font: 400 14px/1.5 Segoe UI,system-ui,-apple-system,sans-serif;
+}}
+
+.icons {
+  display: flex;
+  /* width:500px; */
+  /* align-items: space-between; */
+  /* position:absolute; */
+}
+
 .btn{
   width: 120px;
-  height: 50px;
+  height: 45px;
   background-color: red;
   border-radius: 20px;
   border: 2px solid red;
   transition: background-color 90ms;
 }
 .btn:hover {
-  background-color: lightcoral;
-  border: 2px solid lightcoral;
+  background-color: rgb(247, 70, 70);
+  border: 2px solid rgb(247, 70, 70);
 }
 .btn2{
   width: 120px;
-  height: 50px;
+  height: 45px;
   background-color: red;
   border-radius: 20px;
   border: 2px solid red;
   transition: background-color 90ms;
 }
 .btn2:hover {
-  background-color: lightcoral;
-  border: 2px solid lightcoral;
+  background-color: rgb(247, 70, 70);
+  border: 2px solid rgb(247, 70, 70);
 }
